[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coinaddr"
dynamic = ["version"]
description = "A crypto-currency address inspection/validation library."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Joe Black", email = "me@joeblack.nyc"},
]
maintainers = [
    {name = "Joe Black", email = "me@joeblack.nyc"},
]
keywords = [
    "bitcoin",
    "litecoin", 
    "altcoin",
    "ethereum",
    "address",
    "validation",
    "inspection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "attrs>=19.2.0",
    # Use hashlib built-in sha3 instead of pysha3 for modern Python
    "base58check>=1.0.2",
    "pycryptodome>=3.22.0",
    "zope.interface>=4.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "tox>=4.11.0",
    "hatch>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/joeblackwaslike/coinaddr"
Repository = "https://github.com/joeblackwaslike/coinaddr"
Issues = "https://github.com/joeblackwaslike/coinaddr/issues"

[tool.hatch.version]
path = "coinaddr/__init__.py"
pattern = "__version__ = ['\"](?P<version>.+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["coinaddr"]

[tool.hatch.build.targets.sdist]
include = [
    "coinaddr",
    "tests",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[tool.pytest]
testpaths = ["tests"]

